# lazylog

./: .gitignore  Cargo.toml  README.md  build.rs  demo-geoip.tape  demo.tape
.github/workflows/: ci.yml  release.yml
examples/: bench_load.rs
src/: lib.rs  main.rs
src/log/: correlation.rs  detect.rs  event.rs  format.rs  geoip.rs  loader.rs  mod.rs  parser.rs  scanner.rs  source.rs
src/log/parsers/: apache_access.rs  apache_error.rs  generic.rs  mod.rs  nginx_access.rs  nginx_error.rs  php.rs  symfony.rs
src/query/: export.rs  facets.rs  filter.rs  mod.rs
src/ui/: app.rs  keys.rs  layout.rs  mod.rs
src/ui/components/: help_popup.rs  input_box.rs  mod.rs  statusbar.rs
src/ui/panels/: daterange.rs  detail.rs  events.rs  export_menu.rs  facets.rs  mod.rs  picker.rs
src/ui/style/: theme.rs
tests/: detect.rs  gzip.rs
