[package]
name = "lazylog"
version = "0.1.0"
edition = "2021"
description = "A TUI for browsing log files (Symfony, nginx, apache, PHP), inspired by lazygit"
license = "MIT"
keywords = ["log", "tui", "terminal", "nginx", "symfony"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
memmap2 = "0.9"
memchr = "2"
walkdir = "2"
unicode-width = "0.2"
maxminddb = "0.27.3"

[dev-dependencies]
tempfile = "3"
